# tx_service

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build_eloq_log_service.cmake  build_eloq_metrics.cmake  build_log_service.cmake  build_tx_service.cmake  style_guide.md
eloq_log_service/: .gitignore  CMakeLists.txt  README.md  how2run.md  logstate.md
eloq_log_service/include/: closure.h  fault_inject.h  glog_error_logging.h  log_instance.h  log_server.h  log_service.h  log_service_metrics.h  log_shipping_agent.h  log_state.h  log_state_memory_impl.h  log_state_rocksdb_impl.h  log_utils.h  replay_service_for_test.h  rocksdb_cloud_config.h
eloq_log_service/src/: benchmark.cpp  fault_inject.cpp  ini.c  launch_cl.cpp  launch_server.cpp  launch_sv.cpp  log_instance.cpp  log_server.cpp  log_state_memory_impl.cpp  log_state_rocksdb_cloud_impl.cpp  log_state_rocksdb_impl.cpp  test_log_state_rocksdb.cpp
eloq_log_service/test/: async_write_log_test.cpp  launch_replay_service.cpp  log_server_rocksdb_cloud_tests.cpp  parse_performance_test.cpp  recover_time_test.cpp  replay_service_for_test.h  rocksdb_cloud_delete_range_test.cpp  rocksdb_test.cpp  test_utils.h  write_log_test.cpp
eloq_log_service/test/proto/: test.proto
eloq_metrics/: .clang-format  CMakeLists.txt  README.md
eloq_metrics/benchmark/: CMakeLists.txt  mono_metrics_counter_bench.cpp  mono_metrics_gauge_bench.cpp  mono_metrics_histogram_bench.cpp  redis_metrics_bench.cpp  tx_service_metrics_bench.cpp
eloq_metrics/cmake/: eloq-metrics-pc.in  eloq-metrics.cmake.in
eloq_metrics/include/: dummy_executor.h  meter.h  metrics.h  metrics_collector.h  metrics_manager.h  metrics_registry_impl.h  prometheus_collector.h
eloq_metrics/src/: CMakeLists.txt  dummy_executor.cc  metrics.cc  metrics_app.cc  metrics_manager.cc  metrics_registry_impl.cpp  prometheus_collector.cc
eloq_metrics/tests/: CMakeLists.txt  metrics_collector_test.cc  metrics_http_service_test.cc  metrics_manager_test.cc
store_handler/eloq_data_store_service/: .gitignore  CMakeLists.txt  INIReader.cpp  README.md  RocksDB_Configuration_Flags.md  build_eloq_store.cmake  data_store.h  data_store_factory.h  data_store_fault_inject.cpp  data_store_fault_inject.h  data_store_service.cpp  data_store_service.h  data_store_service_config.cpp  data_store_service_config.h  data_store_service_util.h  ds_request.proto  eloq_store_config.cpp  eloq_store_config.h  eloq_store_data_store.cpp  eloq_store_data_store.h  eloq_store_data_store_factory.h  ini.h  internal_request.h  main.cpp  object_pool.h  purger_event_listener.cpp  purger_event_listener.h  purger_sliding_window.cpp  purger_sliding_window.h  rocksdb_cloud_data_store.cpp  rocksdb_cloud_data_store.h  rocksdb_cloud_data_store_factory.h  rocksdb_cloud_dump.cpp  rocksdb_config.cpp  rocksdb_config.h  rocksdb_data_store.cpp  rocksdb_data_store.h  rocksdb_data_store_common.cpp  rocksdb_data_store_common.h  rocksdb_data_store_factory.h  (+4 more)
tests/: CMakeLists.txt  CcEntry-Test.cpp  CcPage-Test.cpp  StartTsCollector-Test.cpp
tests/include/mock/: mock_catalog_factory.h  mock_log_agent.h  mock_system_handler.h
tx_service/: CMakeLists.txt  cc_resubscribe_v2_impl_tasks_en.md
tx_service/include/: catalog_factory.h  catalog_key_record.h  cc_protocol.h  checkpointer.h  circular_queue.h  cluster_config_record.h  command_set.h  concurrent_queue_wsize.h  constants.h  data_sync_task.h  dead_lock_check.h  distribution_steps.h  eloq_basic_catalog_factory.h  eloq_log_wrapper.h  error_messages.h  invasive_head_list.h  log_closure.h  range_bucket_key_record.h  range_record.h  read_write_entry.h  rpc_closure.h  schema.h  sharder.h  sk_generator.h  spinlock.h  standby.h  statistics.h  system_handler.h  table_statistics.h  tx_command.h  tx_container.h  tx_execution.h  tx_id.h  tx_index_operation.h  tx_key.h  tx_log_service.h  tx_object.h  tx_operation.h  tx_operation_result.h  tx_record.h  (+9 more)
tx_service/include/cc/: catalog_cc_map.h  cc_entry.h  cc_handler.h  cc_map.h  cc_page_clean_guard.h  cc_req_base.h  cc_req_misc.h  cc_req_pool.h  cc_request.h  cc_shard.h  ccm_scanner.h  cluster_config_cc_map.h  flush_coro_scheduler.h  local_cc_handler.h  local_cc_shards.h  non_blocking_lock.h  object_cc_map.h  range_bucket_cc_map.h  range_cc_map.h  range_slice.h  range_slice_type.h  scan.h  slice_data_item.h  template_cc_map.h  tentry.h
tx_service/include/fault/: cc_node.h  fault_inject.h  log_replay_service.h
tx_service/include/proto/: cc_request.proto
tx_service/include/remote/: cc_node_service.h  cc_stream_receiver.h  cc_stream_sender.h  remote_cc_handler.h  remote_cc_request.h  remote_type.h
tx_service/include/sequences/: sequences.h
tx_service/include/store/: data_store_handler.h  int_mem_store.h  snapshot_manager.h
tx_service/raft_host_manager/: CMakeLists.txt  README.md
tx_service/raft_host_manager/include/: raft_host_manager.h  raft_host_manager_service.h
tx_service/raft_host_manager/src/: main.cpp  raft_host_manager.cpp  raft_host_manager_service.cpp
tx_service/src/: catalog_key_record.cpp  checkpointer.cpp  data_sync_task.cpp  dead_lock_check.cpp  eloq_basic_catalog_factory.cpp  range_record.cpp  sharder.cpp  sk_generator.cpp  standby.cpp  tx_execution.cpp  tx_index_operation.cpp  tx_key.cpp  tx_operation.cpp  tx_start_ts_collector.cpp  tx_trace.cpp  tx_worker_pool.cpp
tx_service/src/cc/: cc_entry.cpp  cc_handler_result.cpp  cc_map.cpp  cc_req_misc.cpp  cc_request.cpp  cc_shard.cpp  local_cc_handler.cpp  local_cc_shards.cpp  non_blocking_lock.cpp  range_slice.cpp  reader_writer_cntl.cpp
tx_service/src/fault/: cc_node.cpp  fault_inject.cpp  log_replay_service.cpp
tx_service/src/remote/: cc_node_service.cpp  cc_stream_receiver.cpp  (+3 more)
tx_service/tests/: CMakeLists.txt  CcEntry-Test.cpp  CcPage-Test.cpp  CcRequestWait-Test.cpp  ClusterCrossNg-Test.cpp  LargeObjLRU-Test.cpp  MemDataStore-Test.cpp  StartTsCollector-Test.cpp  TestNodeSmoke-Test.cpp  TxConsistency-Test.cpp
tx_service/tx-log-protos/: README.md  log.proto  log_agent.cpp  log_agent.h  log_util.h
(+234 files in other folders)
